PDF: Check for zero-width spaces when double clicking to select.

BUG=758754

Change-Id: I515f7d7b48f5818a2463dab95e2e3f3c42fb5e24
Reviewed-on: https://chromium-review.googlesource.com/636709
Reviewed-by: dsinclair <dsinclair@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498177}
Former-commit-id: 7c33a9b2e5e182c9730831d2720f0fab80258ee1